--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ license = "MIT"
 keywords = ["lru", "cache", "hashmap"]
 
 [dependencies]
+hashbrown = "0.12.3"
+
+# [dependencies]
+# hashbrown = { version = "0.12", optional = true }
